changes done fronteend created mongo connected and many more